force-app/main/default/objects/Healthcare__c/Healthcare__c.object-meta.xml
<CustomObject>
    <label>Healthcare</label>
    <nameField>
        <label>Healthcare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Healthcares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>