force-app/main/default/objects/Healthcare__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical History</label>
    <length>50</length>
    <type>Text</type>
</CustomField>